--- a/todo.org
+++ b/todo.org
@@ -61,3 +61,5 @@ size the number of queues to the rate
 6 and 60ms for target and interval
 
 size the number of queues to the bandwidth 48 is 6ms target at 100mbit 32? 64? 3ms target?
+
+* it bacame 64 bitt
